<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Inicio"
            android:icon="@drawable/home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/Perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/Registro"
            android:icon="@drawable/registro"
            android:title="@string/menu_registro" />
        <item
            android:id="@+id/Planes"
            android:icon="@drawable/plan"
            android:title="@string/menu_plan" />
        <item
            android:id="@+id/Grupos"
            android:icon="@drawable/grupos"
            android:title="@string/menu_grupos" />
        <item
            android:id="@+id/Horarios"
            android:icon="@drawable/horarios"
            android:title="@string/menu_horarios" />
    </group>
</menu>