<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/Inicio">

    <fragment
        android:id="@+id/Inicio"
        android:name="com.example.prin.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/Horarios"
        android:name="com.example.prin.BlankFragment"
        android:label="@string/menu_horarios"
        tools:layout="@layout/fragment_blank" />

    <fragment
        android:id="@+id/Grupos"
        android:name="com.example.prin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_grupos"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/Perfil"
        android:name="com.example.prin.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/Registro"
        android:name="com.example.prin.RegistroFragment"
        android:label="@string/menu_registro"
        tools:layout="@layout/fragment_registro" />
    <fragment
        android:id="@+id/Planes"
        android:name="com.example.prin.PlanesFragment"
        android:label="@string/menu_registro"
        tools:layout="@layout/fragment_planes" />
</navigation>