<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:height="80dp"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textColor="@color/black"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/tvtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle"
        android:gravity="center"
        android:text="@string/ingresar"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eduser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle2"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ing_matricula"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eduser"
        android:layout_marginTop="1dp"
        android:textColorHint="@color/black"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edpassed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edpass"
        android:layout_marginTop="99dp"
        android:backgroundTint="#0077FF"
        android:text="@string/iniciar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="196dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="515dp"
        app:srcCompat="@drawable/login" />


</RelativeLayout>