<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:padding="10dp"
    tools:context=".BlankFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvcarre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:height="80dp"
                android:gravity="center"
                android:text="@string/carrera"
                android:textColor="#0077FF"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvcua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvcarre"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:height="80dp"
                android:gravity="center"
                android:text="@string/segundo"
                android:textColor="#0077FF"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="193dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:height="100dp"
                android:gravity="center"
                android:src="@drawable/horario1" />

            <TextView
                android:id="@+id/tvcua2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:height="80dp"
                android:gravity="center"
                android:text="@string/quinto"
                android:textColor="#0077FF"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="193dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:height="100dp"
                android:gravity="center"
                android:src="@drawable/horario2" />

            <TextView
                android:id="@+id/tvcua3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:height="80dp"
                android:gravity="center"
                android:text="@string/octavo"
                android:textColor="#0077FF"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="193dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:height="100dp"
                android:gravity="center"
                android:src="@drawable/horario3" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>