<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".PlanesFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:height="50dp"
                android:text="@string/carrera"
                android:textColor="#0275d8"
                android:textSize="35dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="100dp"
                android:height="50dp"
                android:text="@string/ciclo1"
                android:textColor="#0275d8"
                android:textSize="35dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Algoritmos"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Estructura de datos"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Álgebra Lineal"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="100dp"
                android:height="50dp"
                android:text="@string/ciclo2"
                android:textColor="#0275d8"
                android:textSize="35dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Programación Visual"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cliente/Servidor"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Programación WEB"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="100dp"
                android:height="50dp"
                android:text="@string/ciclo3"
                android:textColor="#0275d8"
                android:textSize="35dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Programación para móviles"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Compiladores e intérpretes"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Inteligencia Artificial"
                        android:height="80dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>